crates/snapshot-tests/tests/snapshots/parser__integer_range_negative.snap
---
source: snapshot-tests/tests/parser.rs
expression: error
---
error[InvalidInteger]: invalid integer: integer overflow at `a`
  ┌─ integer_range_negative:1:5
  │
1 │ a = -9223372036854775809
  │     ^^^^^^^^^^^^^^^^^^^^ invalid integer: integer overflow
